Wire up contracts better still broken

--- a/sports-iq-integration/nfl/nfl-player-sportsiq-rating.ipynb
+++ b/sports-iq-integration/nfl/nfl-player-sportsiq-rating.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 31,
    "id": "fc1636a6",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 32,
    "id": "35287976",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 33,
    "id": "cdc81ce5",
    "metadata": {},
    "outputs": [
@@ -128,15 +128,22 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Checking for cached df_master in 'nfl_player_master_2025.csv'...\n",
-      "✓ Loading from cache: nfl_player_master_2025.csv\n",
-      "  Cache age: 0.6 hours\n"
+      "Checking for cached df_master in 'nfl_player_master_2023.csv'...\n",
+      "⊘ Cache expired (24.8 hours old), regenerating...\n",
+      "\n",
+      "Loading data from NFL API...\n",
+      "  ✓ Roster loaded\n",
+      "  ✓ Snap counts loaded\n",
+      "  ✓ Player stats loaded\n",
+      "  ✓ Data merged\n",
+      "  ✓ Data cleaned\n",
+      "✓ Data saved to cache: nfl_player_master_2023.csv\n"
      ]
     }
    ],
    "source": [
     "# Load or generate df_master\n",
-    "season = 2025\n",
+    "season = 2023\n",
     "file = f'nfl_player_master_{season}.csv'\n",
     "\n",
     "df_master, from_cache = load_df_master_with_cache(season=season, cache_file=file)"
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 34,
    "id": "ba913630",
    "metadata": {},
    "outputs": [],
@@ -159,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 35,
    "id": "c0592c7c",
    "metadata": {},
    "outputs": [
@@ -169,17 +176,20 @@
      "text": [
       "Checking for duplicates by full_name:\n",
       "\n",
-      "Found 3 players with multiple rows:\n",
+      "Found 6 players with multiple rows:\n",
       "full_name\n",
-      "Jordan Phillips    2\n",
-      "Jaylon Jones       2\n",
-      "Byron Young        2\n",
+      "Lamar Jackson     2\n",
+      "David Long        2\n",
+      "Josh Allen        2\n",
+      "Michael Carter    2\n",
+      "Jaylon Jones      2\n",
+      "Byron Young       2\n",
       "Name: count, dtype: int64\n",
       "\n",
       "\n",
       "Joe Flacco rows:\n",
       "    full_name     gsis_id    pfr_id team depth_chart_position\n",
-      "5  Joe Flacco  00-0026158  FlacJo00  CIN                   QB\n",
+      "4  Joe Flacco  00-0026158  FlacJo00  CLE                   QB\n",
       "\n",
       "\n",
       "Column names:\n",
@@ -205,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 36,
    "id": "fed09940",
    "metadata": {},
    "outputs": [
@@ -217,23 +227,21 @@
       "\n",
       "\n",
       "Jordan Phillips:\n",
-      "            full_name     gsis_id    pfr_id team position_x  \\\n",
-      "68    Jordan Phillips  00-0031557  PhilJo01  BUF         DL   \n",
-      "1578  Jordan Phillips  00-0040175  PhilJo02  MIA         DL   \n",
+      "           full_name     gsis_id    pfr_id team position_x  \\\n",
+      "118  Jordan Phillips  00-0031557  PhilJo01  BUF         DL   \n",
       "\n",
-      "     depth_chart_position  \n",
-      "68                     DT  \n",
-      "1578                   DT  \n",
+      "    depth_chart_position  \n",
+      "118                   DT  \n",
       "\n",
       "Jaylon Jones:\n",
       "         full_name     gsis_id    pfr_id team position_x depth_chart_position\n",
-      "813   Jaylon Jones  00-0037106  JoneJa12  CHI         DB                   CB\n",
-      "1042  Jaylon Jones  00-0038407  JoneJa13  IND         DB                   CB\n",
+      "1304  Jaylon Jones  00-0037106  JoneJa12  CHI         DB                   CB\n",
+      "1582  Jaylon Jones  00-0038407  JoneJa13  IND         DB                   CB\n",
       "\n",
       "Byron Young:\n",
       "        full_name     gsis_id    pfr_id team position_x depth_chart_position\n",
-      "1198  Byron Young  00-0038978  YounBy00  PHI         DL                   DT\n",
-      "1243  Byron Young  00-0039137  YounBy01   LA         LB                  OLB\n"
+      "1736  Byron Young  00-0038978  YounBy01   LV         DL                   DT\n",
+      "1788  Byron Young  00-0039137  YounBy01   LA         LB                  OLB\n"
      ]
     }
    ],
@@ -248,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 37,
    "id": "ea0eb347",
    "metadata": {},
    "outputs": [],
@@ -426,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 38,
    "id": "9c09d260",
    "metadata": {},
    "outputs": [],
@@ -473,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 39,
    "id": "e00e2a95",
    "metadata": {},
    "outputs": [],
@@ -549,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 40,
    "id": "83d9b404",
    "metadata": {},
    "outputs": [],
@@ -635,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 41,
    "id": "b67bb507",
    "metadata": {},
    "outputs": [],
@@ -723,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 42,
    "id": "3e9eca82",
    "metadata": {},
    "outputs": [],
@@ -777,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 43,
    "id": "c822a5e5",
    "metadata": {},
    "outputs": [],
@@ -833,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 44,
    "id": "41e767fd",
    "metadata": {},
    "outputs": [],
@@ -898,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 45,
    "id": "3b1581a2",
    "metadata": {},
    "outputs": [
@@ -910,37 +918,37 @@
       "\n",
       "=== Scoring position: QB ===\n",
       "\n",
-      "Scoring position: ['QB'] with 81 players\n",
+      "Scoring position: ['QB'] with 78 players\n",
       "\n",
       "\n",
       "=== Scoring position: RB ===\n",
       "\n",
-      "Scoring position: ['RB'] with 144 players\n",
+      "Scoring position: ['RB'] with 137 players\n",
       "\n",
       "\n",
       "=== Scoring position: WR ===\n",
       "\n",
-      "Scoring position: ['WR'] with 238 players\n",
+      "Scoring position: ['WR'] with 212 players\n",
       "\n",
       "\n",
       "=== Scoring position: TE ===\n",
       "\n",
-      "Scoring position: ['TE'] with 135 players\n",
+      "Scoring position: ['TE'] with 110 players\n",
       "\n",
       "\n",
       "=== Scoring position: DL ===\n",
       "\n",
-      "Scoring position: ['DE', 'DT', 'NT'] with 311 players\n",
+      "Scoring position: ['DE', 'DT', 'NT'] with 266 players\n",
       "\n",
       "\n",
       "=== Scoring position: LB ===\n",
       "\n",
-      "Scoring position: ['LB', 'ILB', 'OLB'] with 245 players\n",
+      "Scoring position: ['LB', 'ILB', 'OLB'] with 227 players\n",
       "\n",
       "\n",
       "=== Scoring position: DB ===\n",
       "\n",
-      "Scoring position: ['CB', 'FS', 'SS'] with 411 players\n"
+      "Scoring position: ['CB', 'FS', 'SS'] with 332 players\n"
      ]
     }
    ],
