Fix contract years issue

--- a/sports-iq-integration/nfl/test.ipynb
+++ b/sports-iq-integration/nfl/test.ipynb
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "# Where name is Aaron Rodgers\n",
-    "rodgers_contracts = test[test['player'] == 'Aaron Rodgers']\n",
+    "rodgers_contracts = contracts[contracts['player'] == 'Philip Rivers']\n",
     "rodgers_contracts.head()\n",
     "\n",
     "rodgers_contracts.to_csv('rodgers_contracts.csv', index=False)"
